--- fixing inputBox(disabled/ enabled)--- - Using property disabled = true; - Using property disbleed = false;

--- a/Shopping/style.css
+++ b/Shopping/style.css
@@ -8,6 +8,12 @@ body {
     height:600px;
 
 }
+#wrapper {
+    background: aliceblue;
+    width: 600px;
+    height: 600px;
+    margin: 0 auto;
+}
 
 button {
     background: azure;
